<resources>
    <string name="app_name">DuesTake</string>
    <string name="endless_possibilities">Endless possibilities</string>
    <string name="your_name">Your Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="sign_up_to_apply_for_loan">Sign up to apply for loan</string>
    <string name="create_account">Create Account</string>
    <string name="i_already_have_an_account">I Already have an account</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address (Optional)</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="loan_details">Loan requriment</string>
    <string name="loan_amount">Loan amount (min 5,000 ₹ - max 50,00,000 ₹)</string>
    <string name="tenure_in_months">Tenure (min 1 month - max 360 month)</string>
    <string name="by_clicking_here_i_agree_to_terms_and_condition">By clicking here I agree to terms and condition</string>
    <string name="ask_for_loan">Ask for loan</string>
    <string name="create_an_new_account">Create an new account</string>
    <string name="sign_up">Sign up</string>
    <string name="retry">Retry</string>
    <string name="failed_to_connect">Failed to connect</string>
    <string name="hello_blank_fragment" />
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_mobile">Verify mobile</string>
    <string name="haven_t_got_the_confirmation_code_yet">Haven\'t got the confirmation code to %1$s yet?</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="confirm_otp">Confirm OTP</string>
    <string name="edit_mobile_number">Edit mobile number</string>
    <string name="personal_details">Personal details</string>
    <string name="address_verification">Address verification</string>
    <string name="kyc_details">KYC details</string>
    <string name="employment_details">Employment details</string>
    <string name="pincode">Pincode</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="continue_">Continue</string>
    <string name="bank_name">Bank name</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="pan_number">Pan number</string>
    <string name="aadhar_number">Aadhar number</string>
    <string name="full_name_as_per_pan">Full name as per pan</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="monthly_expenses">Monthly expenses (₹)</string>
    <string name="father_s_name">Father’s name</string>
    <string name="mother_s_name">Mother’s name</string>
    <string name="gender">Gender</string>
    <string name="marital_status">Marital status</string>
    <string name="qualification">Qualification</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="welcome_to_duestake">Welcome to DuesTake</string>
    <string name="congratulations">Congratulations</string>
    <string name="you_are_eligible_to_apply_for_loan">You have Pre-Approved Offers. Apply Now and get Instant Disbursal</string>
    <string name="our_bank_partners">Our Bank Partners</string>
    <string name="designation">Designation</string>
    <string name="monthly_income">Monthly income (₹)</string>
    <string name="mode_of_salary">Mode of salary</string>
    <string name="company_name">Company name</string>
    <string name="company_type">Company type</string>
    <string name="industry">Industry</string>
    <string name="terms_and_condition">By clicking here I agree to <b>terms and condition</b></string>
    <string name="experience_in_current_company_years">Experience in current company (Years)</string>
    <string name="employment_type">Employment type</string>
    <string name="your_profile">Your Profile</string>
    <string name="loan_type">Loan Type</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
</resources>