<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.onboarding.PersonalDetailsFragment">


    <ScrollView
        android:id="@+id/addEntrySV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/TitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/personal_details"
                android:textColor="@color/text1"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_textInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:hint="@string/full_name_as_per_pan"
                app:boxStrokeColor="@color/primary"
                app:hintTextColor="@color/hint"
                app:layout_constraintTop_toBottomOf="@id/TitleTextView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:inputType="textPersonName"
                    android:textColor="@color/text1" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/genderTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/gender"
                android:textColor="@color/label"
                android:layout_marginTop="16dp"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/name_textInput"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/genderSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genderTextView" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dateOfBirth_textInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:hint="@string/date_of_birth"
                app:boxStrokeColor="@color/primary"
                app:hintTextColor="@color/hint"
                app:layout_constraintTop_toBottomOf="@id/genderSpinner">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dateOfBirth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:focusable="false"
                    android:fontFamily="@font/poppins_medium"
                    android:inputType="text"
                    android:textColor="@color/text1" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/maritalStatusTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/marital_status"
                android:textColor="@color/label"
                android:layout_marginTop="16dp"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/dateOfBirth_textInput"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/maritalStatusSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/maritalStatusTextView" />

            <TextView
                android:id="@+id/qualificationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/qualification"
                android:textColor="@color/label"
                android:layout_marginTop="16dp"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/maritalStatusSpinner"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/qualificationSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/qualificationTextView" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/monthlyExpenses_textInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:hint="@string/monthly_expenses"
                app:boxStrokeColor="@color/primary"
                app:hintTextColor="@color/hint"
                app:layout_constraintTop_toBottomOf="@id/qualificationSpinner">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/monthlyExpenses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:inputType="number"
                    android:textColor="@color/text1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fatherName_textInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:hint="@string/father_s_name"
                app:boxStrokeColor="@color/primary"
                app:hintTextColor="@color/hint"
                app:layout_constraintTop_toBottomOf="@id/monthlyExpenses_textInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fatherName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:inputType="text"
                    android:textColor="@color/text1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/motherName_textInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:hint="@string/mother_s_name"
                app:boxStrokeColor="@color/primary"
                app:hintTextColor="@color/hint"
                app:layout_constraintTop_toBottomOf="@id/fatherName_textInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/motherName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_medium"
                    android:inputType="text"
                    android:textColor="@color/text1" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnContinue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/btn_background"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/continue_"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/motherName_textInput" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/errorMessageCL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
            android:id="@+id/itemErrorMessage"
            layout="@layout/item_error_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/progressBarCL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateDrawable="@drawable/progressbar_costume_view"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>